# accelerate-lapack

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.template.json  README.md
.github/workflows/: git-sync.yml
cmake/: HandlePolicies.cmake  ParseTBDMacros.cmake
packaging/: AccelerateLAPACKConfig.cmake.in  CMakeLists.txt
src/: CMakeLists.txt  lapack64_version.c  lapack_version.c  new-blas-ilp64.alias.in  new-blas.alias.in  new-lapack-ilp64.alias.in  new-lapack.alias.in
